--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
         </div>
     </main>
     <footer>
-        <div id="divFooter">
-            <span>- Site feito por: Daniel Holanda -</span><br/>
-            <a href="https://linkedin.com/in/daniel-holanda-campos" target="_blank"><span>- LinkedIn</span></a>
-            <span> |</span>
-            <a href="https://github.com/DHolandaC" target="_blank"><span>Github -</span></a>
+        <div class="divContato">
+            <p>Site feito por Daniel Holanda</p>
+            <span><a target="_blank" href="https://linkedin.com/in/daniel-holanda-campos/">LinkedIn</a></span>
+            <span>|</span>
+            <span><a target="_blank" href="https://github.com/dholandac/">Github</a></span>
         </div>
-        <div id="divFooterBaixo"></div>
     </footer>
 </body>
 </html>
